terraform-advance/imports.tf
# import {
#   id = "my_existing_instance_id" 
#   to = aws_s3_bucket.existing_bucket
# }

# resource "aws_instance" "my_existing_instance" {
#   ami = "ami-05d2d839d4f73aafb"
#   instance_type = "t3_nano"
#   key_name = "key_name"
# }

# # Manage existing instance state
